start login page - refs #10699

--- a/htdocs/app/design/frontend/jumbobag/default/locale/fr_FR/translate.csv
+++ b/htdocs/app/design/frontend/jumbobag/default/locale/fr_FR/translate.csv
@@ -34,7 +34,7 @@
 "Related Products","Produits associés"
 "Popular Products","Produits populaires"
 "Availability:","Disponibilité"
-"Sign In","Inscription"
+"Sign In","Connexion"
 "Create an Account","Créer un compte"
 "No tags connected to product","No tags connected to product"
 "View as","Voir"
