--- a/htdocs/app/design/frontend/jumbobag/default/locale/fr_FR/Mage_Customer.csv
+++ b/htdocs/app/design/frontend/jumbobag/default/locale/fr_FR/Mage_Customer.csv
@@ -485,7 +485,7 @@
 "Please enter the country.","Veuillez renseigner le pays."
 "Please enter the first name.","Veuillez renseigner le prénom."
 "Please enter the last name.","Veuillez renseigner le nom de famille."
-"Please enter your email address below. You will receive a link to reset your password.","Saisissez votre email ci-dessous. Nous vous enverrons un lien pour réinitialiser votre mot de passe."
+"Please enter your email address below. You will receive a link to reset your password.","Veuillez entrer votre adresse e-mail et nous vous enverrons le lien pour créer un nouveau mot de passe."
 "Please make sure your passwords match.","Vérifiez que vos mots de passe concordent."
 "Please select a website which contains store view","Veuillez sélectionner un site web qui contienne une vue magasin"
 "Recovery Link Expiration Period (days)","Durée avant expiration d'un lien de récupération (en jours)"
