make responsive checkout cart design

--- a/htdocs/app/design/frontend/jumbobag/default/locale/en_US/translate.csv
+++ b/htdocs/app/design/frontend/jumbobag/default/locale/en_US/translate.csv
@@ -63,6 +63,7 @@
 "Continue to Checkout","Continue to Checkout"
 "Edit item","Edit item"
 "Remove This Item","Remove This Item"
+"Remove","Remove"
 "Are you sure you would like to remove this item from the shopping cart?","Are you sure you would like to remove this item from the shopping cart?"
 "Description","Description"
 "Short Description","Short Description"
