--- a/htdocs/app/design/frontend/jumbobag/default/locale/fr_FR/translate.csv
+++ b/htdocs/app/design/frontend/jumbobag/default/locale/fr_FR/translate.csv
@@ -51,6 +51,7 @@
 "An error occurred while adding item to wishlist.","An error occurred while adding item to wishlist."
 "Edit item","Edit item"
 "Remove This Item","Remove This Item"
+"Remove","Supprimer"
 "Are you sure you would like to remove this item from the shopping cart?","Are you sure you would like to remove this item from the shopping cart?"
 "No tags connected to product","No tags connected to product"
 "You need to specify a username","Specificiez un username"
