--- a/htdocs/app/design/frontend/jumbobag/default/locale/fr_FR/translate.csv
+++ b/htdocs/app/design/frontend/jumbobag/default/locale/fr_FR/translate.csv
@@ -66,3 +66,4 @@
 "color","couleur"
 "Add to Cart","Ajouter au panier"
 "View Cart","Voir le panier"
+"We found %d result(s) for '%s'", "Nous avons trouvé %d résultat(s) pour ""%s"""
