activate cookie_restriction and personalize message - refs #10744

--- a/htdocs/app/locale/de_DE/Mage_Cms.csv
+++ b/htdocs/app/locale/de_DE/Mage_Cms.csv
@@ -121,3 +121,5 @@
 "Unable to find a page to delete.","Es wurde keine Seite zum Löschen gefunden."
 "WYSIWYG Options","WYSIWYG Optionen"
 "px.","px."
+"This website requires cookies to provide all of its features. For more information on what data is contained in the cookies, please see our %s. To accept cookies from this site, please click the Allow button.","Diese Website benötigt Cookies, um alle Funktionen anbieten zu können. Weitere Informationen darüber, welche Daten in den Cookies enthalten sind, finden Sie auf unserer %s. Um Cookies von dieser Website zu akzeptieren, klicken Sie bitte auf die Schaltfläche Zulassen"
+"Privacy Policy page","Datenschutzrichtlinie"
