--- a/htdocs/app/locale/fr_FR/Mage_Cms.csv
+++ b/htdocs/app/locale/fr_FR/Mage_Cms.csv
@@ -129,3 +129,5 @@
 "Insert File...","Insérer un fichier..."
 "Media Gallery","Galerie media"
 "The static block content cannot contain  directive with its self.","Le contenu du bloc statique ne peut pas contenir sa propre directive."
+"This website requires cookies to provide all of its features. For more information on what data is contained in the cookies, please see our %s. To accept cookies from this site, please click the Allow button.","Nous utilisons des cookies afin d'améliorer votre expérience sur Jumbobag. Pour plus d'informations sur les données contenues dans les cookies, veuillez consulter notre %s. Pour accepter les cookies, veuillez cliquer sur le bouton Autoriser."
+"Privacy Policy page","page sur notre politique de confidentialité"
