--- a/htdocs/app/locale/it_IT/Mage_Cms.csv
+++ b/htdocs/app/locale/it_IT/Mage_Cms.csv
@@ -128,3 +128,5 @@
 "Warning","Attenzione"
 "Firebug is known to make the WYSIWYG editor slow unless it is turned off or configured properly.","Firebug potrebbe rendere l'editor WYSIWYG più lento a meno che non sia disattivato o configurato correttamente"
 "Hide","Nascondi"
+"This website requires cookies to provide all of its features. For more information on what data is contained in the cookies, please see our %s. To accept cookies from this site, please click the Allow button.","Questo sito web richiede che i cookie forniscano tutte le sue caratteristiche. Per ulteriori informazioni su quali sono i dati contenuti nei cookie, consulta la nostra %s. Per accettare i cookie da questo sito, fai clic sul pulsante Consenti."
+"Privacy Policy page","pagina sulla privacy"
