Add checkout success theme

--- a/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/default/locale/fr_FR/translate.csv
+++ b/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/default/locale/fr_FR/translate.csv
@@ -67,3 +67,4 @@
 "Add to Cart","Ajouter au panier"
 "View Cart","Voir le panier"
 "We found %d result(s) for '%s'", "Nous avons trouvé %d résultat(s) pour ""%s"""
+"Back to Store", "Retour à la boutique"
