change shit search locale  - #10745

--- a/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/default/locale/fr_FR/translate.csv
+++ b/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/default/locale/fr_FR/translate.csv
@@ -1,5 +1,5 @@
 "Home","Accueil"
-"Search entire store here...","Type and hit enter"
+"Search entire store here...","Rechercher..."
 "Your Language:","Langage"
 "Currency:","Devise:"
 "Shopping cart","Panier"
