Fix minimal price display

--- a/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/default/locale/fr_FR/Mage_Adminhtml.csv
+++ b/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/default/locale/fr_FR/Mage_Adminhtml.csv
@@ -1159,7 +1159,7 @@
 "AirMail Template Preview","Prévisualisation du gabarit de AirMail"
 "An error has occured while syncronizing media storages.","Erreur lors de la synchronisation des stockages de media."
 "Apply Theme","Appliquer le thème"
-"As low as:","Prix spécial :"
+"As low as:","A partir de :"
 "Billing Address:","Adresse de facturation"
 "Cancel URL:","URL d'annulation :"
 "Cannot update the item's quantity.","Impossible de mettre à jour la quantité de l'article."
