--- a/htdocs/app/locale/fr_FR/Mage_Api.csv
+++ b/htdocs/app/locale/fr_FR/Mage_Api.csv
@@ -350,7 +350,7 @@
 "Add to Wishlist","Ajouter à la liste d'envies"
 "AirMail Template Preview","Prévisualisation du gabarit de AirMail"
 "Apply Theme","Appliquer le thème"
-"As low as:","Prix spécial :"
+"As low as:","A partir de :"
 "Back","Retour"
 "Cancel URL:","URL d'annulation :"
 "Carrier","Transporteur"
