--- a/htdocs/app/locale/fr_FR/Mage_Catalog.csv
+++ b/htdocs/app/locale/fr_FR/Mage_Catalog.csv
@@ -71,7 +71,7 @@
 "Are you sure you would like to remove all products from your comparison?","Êtes-vous sûr(e) de vouloir enlever tous les produits de la comparaison ?"
 "Are you sure you would like to remove this item from the compare products?","Êtes-vous sûr(e) de vouloir enlever cet article de la comparaison ?"
 "Are you sure?","Êtes-vous sûr(e) ?"
-"As low as:","Prix spécial :"
+"As low as:","A partir de :"
 "Assign","Assigner"
 "Assign product link","Assigner un lien de produit"
 "Assign product to category","Assigner un produit à une catégorie"
